fixed homepage on iOS 8

--- a/css/share_menu.less
+++ b/css/share_menu.less
@@ -11,12 +11,13 @@
 }
 
 
+
 // icon in a circle is the only visible thing
 .share-menu .icon-share {
   border: .1em currentColor solid;
   border-radius: 50%;
-  padding: 0.08em;
-  padding-left: 0.04em;
+  padding: 0.05em;
+  padding-left: 0.01em;
   height: 1.5em;
   width: 1.5em;
   display: inline-block;
